--- a/front/src/index.css
+++ b/front/src/index.css
@@ -4,11 +4,15 @@
   font-weight: 400;
 
   color: rgba(255, 255, 255, 0.87);
-  background: rgb(2,0,36);
-  background: linear-gradient(207deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 12%, rgba(0,212,255,1) 100%);
-
+  background: rgb(230,55,255);
+  background: radial-gradient(circle, rgba(230,55,255,0.61390493697479) 0%, rgba(70,144,252,1) 100%);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
