--- a/front/src/App.css
+++ b/front/src/App.css
@@ -233,12 +233,28 @@
   transform: scale(1.05);
 }
 
+.image-info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 50%;
+}
+
 .image-title {
   font-size: 2rem;
   margin: 10px 0;
   color: white;
   margin: .5rem;
   height: fit-content;
+}
+
+.image-significance {
+  font-size: 1rem;
+  margin: 10px 0;
+  color: white;
+  margin: .5rem;
+  height: fit-content;
+  flex-wrap: wrap;
 }
 
 .word-count {
