--- a/front/src/landing.css
+++ b/front/src/landing.css
@@ -53,16 +53,30 @@
   padding: 4rem 2rem;
   position: relative;
   z-index: 2;
-  text-align: center;
+  width: 50%;
+  margin: 0 3rem;
+  color: #ff7b7b;
+}
+
+.content img {
+  position: absolute;
+  right: -50%;
+  width: 40%;
+  top: 3rem;
 }
 
 h1 {
   font-size: 4rem;
   margin: 1rem 0;
+  color: black;
 }
 
 h2, h3, h4 {
   margin: 0.5rem 0;
+}
+
+h2 {
+  color: #e94242;
 }
 
 
