--- a/front/src/App.css
+++ b/front/src/App.css
@@ -240,6 +240,8 @@
   flex-direction: column;
   gap: 10px;
   width: 50%;
+  margin-right: 3rem;
+  margin-top: 1rem;
 }
 
 .image-title {
@@ -327,7 +329,6 @@
 .profile-content .image-item {
   width: 300px;
   height: 300px;
-  border: 1px solid white;
   border-radius: 15px;
 }
 .profile-content .image-item img {
