--- a/front/src/index.css
+++ b/front/src/index.css
@@ -18,6 +18,11 @@
   --red2: #ff7b7b;
 }
 
+@font-face {
+  font-family: glitch2;
+  src: url(mokoto-mokoto-regular-glitch-mark-2-400.ttf);
+}
+
 body {
   margin: 0;
   padding: 0;
