--- a/front/src/App.css
+++ b/front/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .upload-zone {
-  border: 2px dashed var(--red2);
+  border: 2px dashed black;
   border-radius: 8px;
   padding: 40px;
   text-align: center;
@@ -42,7 +42,7 @@
 }
 
 .modal-content {
-  background: #97c19e;
+  background: rgb(157, 196, 255);
   padding: 30px;
   border-radius: 12px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
@@ -88,7 +88,7 @@
 }
 
 .checklist-item.completed {
-  color: var(--red2);
+  color: black;
 }
 
 .bottom-buttons {
@@ -114,23 +114,7 @@
   border: none;
   font-size: 1.5em;
   cursor: pointer;
-  color: var(--red2);
-}
-
-.open-button {
-  margin: 20px auto;
-  background-color: var(--red2);
-  color: var(--dark);
-  padding: 10px 20px;
-  border: none;
-  border-radius: 8px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.open-button:hover {
-  background-color: #535bf2;
+  color: black;
 }
 
 .buttons-container {
@@ -148,8 +132,8 @@
 .fn-btns {
   margin-top: 15px;
   padding: 8px 20px;
-  background-color: var(--red2);
-  color: var(--dark);
+  background-color: black;
+  color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -178,20 +162,20 @@
   padding: 12px;
   border-radius: 4px;
   background-color: #1a1a1a;
-  color: var(--dark);
+  color: white;
   border: 1px solid #3f3f3f;
   resize: none;
 }
 
 .text-edit-area:focus {
   outline: none;
-  border-color: var(--red2);
+  border-color: black;
 }
 
 .spinner {
   border: 10px solid white;
   border-radius: 50%;
-  border-top: 10px solid var(--red2);
+  border-top: 10px solid black;
   width: 12px;
   height: 12px;
   animation: spin 2s linear infinite;
@@ -246,7 +230,7 @@
 .image-title {
   font-size: 2rem;
   margin: 10px 0;
-  color: var(--dark);
+  color: black;
   margin: .5rem;
   height: fit-content;
 }
@@ -254,7 +238,7 @@
 .image-significance {
   font-size: 1rem;
   margin: 10px 0;
-  color: var(--dark);
+  color: black;
   margin: .5rem;
   height: fit-content;
   flex-wrap: wrap;
@@ -294,31 +278,15 @@
 
 .alt-text-chip:hover {
   background: #3f3f3f;
-  border-color: var(--red2);
-}
-
-
-.open-button {
-  padding: 10px 20px;
-  background-color: var(--red2);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  color: var(--dark);
-  width: 400px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  font-size: 2rem;
-  font-weight: bold;
-}
-
-.open-button:hover {
-  background-color: #8c3f3f;
+  border-color: black;
 }
 
 .profile-content {
   width: 100%;
   height: 100%;
+}
+.profile-content > h2 {
+  color: black;
 }
 
 .profile-content .image-grid {
