--- a/front/src/App.css
+++ b/front/src/App.css
@@ -56,6 +56,10 @@
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+.modal-content h2 { 
+  color: black;
+}
 .modal-small {
   width: 50%;
 }
@@ -155,14 +159,15 @@
   gap: 20px;
   padding: 20px;
   width: 100%;
+  height: max-content;
 }
 
 .text-edit-area {
-  min-height: 10%;
+  min-height: 30%;
   padding: 12px;
   border-radius: 4px;
-  background-color: #1a1a1a;
-  color: white;
+  background-color: #d1d1d1;
+  color: black;
   border: 1px solid #3f3f3f;
   resize: none;
 }
@@ -267,11 +272,11 @@
 }
 
 .alt-text-chip {
-  background: #2a2a2a;
+  background: #d1d1d1;
   border: 1px solid #3f3f3f;
   border-radius: 20px;
   padding: 8px 16px;
-  color: #fff;
+  color: #111111;
   cursor: pointer;
   transition: all 0.2s;
 }
@@ -279,14 +284,12 @@
 .alt-text-chip:hover {
   background: #3f3f3f;
   border-color: black;
+  color: white;
 }
 
 .profile-content {
   width: 100%;
   height: 100%;
-}
-.profile-content > h2 {
-  color: black;
 }
 
 .profile-content .image-grid {
